syntax = "proto3";

option go_package = "document-generators-presentation-abstractions";

package Edm.DocumentGenerators.Presentation.Abstractions;

option csharp_namespace = "Edm.DocumentGenerators.Presentation.Abstractions";

message DocumentNotificationParameterDto {
  string template_parameter_id = 1;
  string value_attribute_id = 2;
}

